Created the energy chart and added missing server code
